[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "life-monster"
version = "1.0.0"
description = "多模态 AI 生活导师系统 — 把目标拆成每天可完成的行动"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["productivity", "AI", "life-coach", "customtkinter", "flask"]

authors = [
    {name = "Life Monster Contributors"},
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Chinese (Simplified)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Desktop Environment",
    "Topic :: Education",
]

dependencies = [
    "customtkinter>=5.2.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "matplotlib>=3.7.0",
    "mysql-connector-python>=8.0.0",
    "pillow>=10.0.0",
    "pyttsx3>=2.90",
    "python-dotenv>=1.0.0",
    "redis>=4.5.0",
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/Yunfen32/Life_Monster"
Repository = "https://github.com/Yunfen32/Life_Monster.git"
Issues = "https://github.com/Yunfen32/Life_Monster/issues"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["*.json"]
